{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 31,
  "lineage": "40ea3a36-89f9-7cc3-39ba-8da7a927d059",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073699141571:vpc/vpc-0088a2f44a3271f34",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b6a6a976c752177e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-026297cd4a6b468ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0088a2f44a3271f34",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ee51ecdab265fc56",
            "owner_id": "073699141571",
            "tags": {
              "Name": "defaultvpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kube-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:073699141571:instance/i-0601455259acc4a53",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ayaz-petclinic-master-server-profile",
            "id": "i-0601455259acc4a53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "ayaz",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-001680d4791a87cf1",
            "private_dns": "ip-172-31-30-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.63",
            "public_dns": "ec2-54-167-8-73.compute-1.amazonaws.com",
            "public_ip": "54.167.8.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0467c6dff2dd91055",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ayaz-petclinic-k8s-master-sec-group",
              "ayaz-petclinic-k8s-mutual-sec-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063ee0e7b3f39d12f",
            "tags": {
              "Id": "1",
              "Name": "ayaz-kube-master",
              "Project": "tera-kube-ans",
              "Role": "master",
              "environment": "dev"
            },
            "tags_all": {
              "Id": "1",
              "Name": "ayaz-kube-master",
              "Project": "tera-kube-ans",
              "Role": "master",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0142bf7082bad3f73",
              "sg-0febfddbee6efecdb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.petclinic-master-server-profile",
            "aws_security_group.petclinic-kube-master-sg",
            "aws_security_group.petclinic-mutual-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:073699141571:instance/i-0c2b9af06942a191a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2b9af06942a191a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "ayaz",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e8a50c51e313ba6",
            "private_dns": "ip-172-31-28-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.51",
            "public_dns": "ec2-184-72-66-43.compute-1.amazonaws.com",
            "public_ip": "184.72.66.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eca9762f48b596fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ayaz-petclinic-k8s-mutual-sec-group",
              "ayaz-petclinic-k8s-worker-sec-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063ee0e7b3f39d12f",
            "tags": {
              "Id": "1",
              "Name": "ayaz-worker-1",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tags_all": {
              "Id": "1",
              "Name": "ayaz-worker-1",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0142bf7082bad3f73",
              "sg-0a0ab0a8ce2690bb4"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic-kube-worker-sg",
            "aws_security_group.petclinic-mutual-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:073699141571:instance/i-0cb8550bc43be81bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb8550bc43be81bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "ayaz",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f74b3217b5db2e01",
            "private_dns": "ip-172-31-22-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.153",
            "public_dns": "ec2-54-163-215-70.compute-1.amazonaws.com",
            "public_ip": "54.163.215.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0490c27f23dfe5828",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ayaz-petclinic-k8s-mutual-sec-group",
              "ayaz-petclinic-k8s-worker-sec-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063ee0e7b3f39d12f",
            "tags": {
              "Id": "2",
              "Name": "ayaz-worker-2",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tags_all": {
              "Id": "2",
              "Name": "ayaz-worker-2",
              "Project": "tera-kube-ans",
              "Role": "worker",
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0142bf7082bad3f73",
              "sg-0a0ab0a8ce2690bb4"
            ]
          },
          "dependencies": [
            "aws_security_group.petclinic-kube-worker-sg",
            "aws_security_group.petclinic-mutual-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-kube-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073699141571:security-group/sg-0febfddbee6efecdb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0febfddbee6efecdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10259
              }
            ],
            "name": "ayaz-petclinic-k8s-master-sec-group",
            "name_prefix": "",
            "owner_id": "073699141571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-master-secgroup"
            },
            "tags_all": {
              "Name": "kube-master-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0088a2f44a3271f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-kube-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073699141571:security-group/sg-0a0ab0a8ce2690bb4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0ab0a8ce2690bb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              }
            ],
            "name": "ayaz-petclinic-k8s-worker-sec-group",
            "name_prefix": "",
            "owner_id": "073699141571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kube-worker-secgroup"
            },
            "tags_all": {
              "Name": "kube-worker-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0088a2f44a3271f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "petclinic-mutual-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:073699141571:security-group/sg-0142bf7082bad3f73",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0142bf7082bad3f73",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8472
              }
            ],
            "name": "ayaz-petclinic-k8s-mutual-sec-group",
            "name_prefix": "",
            "owner_id": "073699141571",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0088a2f44a3271f34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.name"
          ]
        }
      ]
    }
  ]
}